# NeoDex

./: .gitignore  README.MD  requirements.txt
embeddings/chroma_db/: chroma.sqlite3
python-core/chroma_db/: chroma.sqlite3
python-core/embeddings/: chroma_utils.py  config.py  embedder.py  loader.py  main.py
python-core/query/: config.py  query_embeddings.py
rust-core/: Cargo.toml  blacklisted_folders.txt  index.db
rust-core/src/: file_indexer.rs  incremental.rs  main.rs  skipcompare.rs
